--- a/frontend2/src/app/views/produto-crud/produto-crud.component.html
+++ b/frontend2/src/app/views/produto-crud/produto-crud.component.html
@@ -1,1 +1,6 @@
-<p>produto-crud works!</p>
+<button mat-raised-button (click)="navigateToProductCreate()"
+    color="primary">
+    Novo Produto
+</button>
+
+<app-product-read></app-product-read>
